<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:padding="5dip"
  android:background="@color/WHITE"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout 
    android:background = "@drawable/blue_white_bg"
    android:layout_height="wrap_content" 
    android:id="@+id/linearLayout1" 
    android:layout_width="fill_parent" 
    android:gravity="bottom">
        <ImageView 
        android:layout_height="wrap_content" 
        android:src="@drawable/question" 
        android:id="@+id/imageView1" 
        android:layout_width="wrap_content">
        </ImageView>
        <TextView 
        android:textColor="@color/BLACK"
        android:text="@string/please_choose_hint" 
        android:id="@+id/txt_sub_menu" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <AutoCompleteTextView 
    android:layout_marginTop = "5dip"
    android:hint="@string/subject" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:id="@+id/subjectAutoCompleteTextView">
    </AutoCompleteTextView>
    <AutoCompleteTextView 
    android:hint="@string/verb" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:id="@+id/predicateAutoCompleteTextView">
    </AutoCompleteTextView>
    <AutoCompleteTextView 
    android:hint="@string/object" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:id="@+id/objectAutoCompleteTextView">
    </AutoCompleteTextView>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/input_subject"
        android:textColor="#ff0000"
        android:id="@+id/queryText"
        />
    <LinearLayout 
    android:layout_height="wrap_content" 
    android:id="@+id/linearLayout2" 
    android:layout_width="fill_parent" 
    android:gravity="right">
        <Button 
        android:drawableLeft = "@drawable/refresh"
        android:text="@string/clear" 
        android:layout_weight = "1"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" android:id="@+id/buttonClear">
        </Button>
    	<Button 
    	android:layout_weight = "1"
	    android:drawableLeft="@drawable/search_small"
	    android:layout_height="wrap_content" 
	    android:text="@string/search" 
	    android:layout_width="wrap_content" 
	    android:id="@+id/searchButton">
    </Button>
    </LinearLayout>
</LinearLayout>
