<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This is a primitive example showing the different types of preferences available. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="about_category"
         android:title="@string/information" >
        
    	<PreferenceScreen
            android:summary="@string/rate_diemdenviet"
            android:title="Rate" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=hust.se.vtio.icompanion#rate" >
            </intent>
        </PreferenceScreen>
         
        <PreferenceScreen
            android:summary="Send email to SIG group"
            android:title="@string/contact" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:caotuandung@gmail.com?subject=About Điểm đến Việt" >
                <extra
                    android:name="android.intent.extra.TEXT"
                    android:value="Hi SIG Group, \n" />
            </intent>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="Like Điểm đến Việt on Facebook"
            android:title="Facebook" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.facebook.com/icompanion.sig" >
            </intent>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/intro_sig"
            android:title="@string/about" >
            <intent
                android:action=".VersionChangeLog"
                 >
                <extra
                    android:name="display"
                    android:value="about" />
            </intent>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/current_version"
            android:title="@string/version" >
            
            <intent
                android:action=".VersionChangeLog"
                 >
                <extra
                    android:name="display"
                    android:value="version" />
            </intent>
            
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>