<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    android:padding="7dip">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:layout_alignParentTop="true"
	    android:id="@+id/linearLayout1">

	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/accommodation_search" />
	</LinearLayout>
	
	<TextView 
	    android:id="@+id/textView01"
	    android:layout_below="@id/linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/you_want_find_a_accommodation"/>

	<LinearLayout 
	    android:layout_above="@id/linearLayout3"
	    android:layout_below="@id/textView01"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <ScrollView 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:padding="5dip">
	        <LinearLayout 
	            android:id="@+id/linearLayoutListConstrain"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:orientation="vertical">
	            
	        </LinearLayout>
	        
	    </ScrollView>
	    
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/BLACK" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/info_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/BLACK" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/radiusSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_range_of"
                android:textColor="@color/BLACK" />
        </LinearLayout>
    </LinearLayout>
	    
</RelativeLayout>
   	