<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip"
    android:background="@color/WHITE" >

    
    <LinearLayout
        android:id="@+id/headLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" 
            android:paddingBottom="10px">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/subapp_dining"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/BLACK"
                android:text="@string/want_find_dining_service" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:id="@+id/footerLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px">
            <Button 
                android:background="@drawable/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchButton"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/BLACK"
                android:text="@string/search"
                android:id="@+id/textView4"/>
        </LinearLayout>   
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/info_button"
                android:id="@+id/helpButton"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/BLACK"
                android:text="@string/help"
                android:id="@+id/txtAngiodau"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10px">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiusSpinner">
            </Spinner>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_range_of"
                android:textColor="@color/BLACK"
                android:id="@+id/textView6"/>
        </LinearLayout>
    </LinearLayout> 

     <LinearLayout
   	    android:id="@+id/linearLayout3"
   	    android:layout_width="fill_parent"
   	    android:layout_height="fill_parent"
   	    android:layout_above="@id/footerLayout"
   	    android:layout_below="@id/headLayout"
   	    android:orientation="vertical" >

   	    <ScrollView
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:layout_marginBottom="5dip" >

   	        <LinearLayout
   	            android:id="@+id/linearLayoutListConstrain"
   	            android:layout_width="fill_parent"
   	            android:layout_height="wrap_content"
   	            android:orientation="vertical" >
   	        </LinearLayout>
   	    </ScrollView>
   	</LinearLayout> 
</RelativeLayout>